* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.23...dev][Unreleased]]

*** Added
+ *tetragono*: Tetragono will print backtrace of the current process when receiving SIGUSR1.
*** Changed
+ *tetragono*: Update line search strategy, remove =line_search_error_threshold=, add =line_search_parameter= in
  =ap_run= and =gm_run=. =line_search_parameter= multiplied =step_size= obtained by line search will be the real step
  size used to update the state.
*** Deprecated
*** Removed
+ *tetragono*: =gm_data_load= is removed, please use =gm_hamiltonian= to replace the hamiltonian instead.
*** Fixed
+ *tetragono*: Fix the wrong error message when trying to import module used by =ex_create=, =ap_ansatz_mul= and so on.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.22...v0.2.23][v0.2.23]] - 2022-10-09

*** Added
+ *tetragono*: Add =ap_hamiltonian= to replace the hamiltonian of the ansatz product state in tetragono shell.
+ *tetragono*: Add =multichain_number= for =ap_run=, which will run multiple chains inside the same MPI process.
+ *wrapper*: Add python package =wrapper_TAT= to provide a wrapper over torch to provide similar interface as =TAT.py=.
+ *tetragono*: Add =observe_max_batch_size= option for =ap_run=, which will set the max limit of batch size when
  calculating wss.
*** Deprecated
+ *tetragono*: =gm_data_load= is deprecated, it will be removed in the future, please use =gm_hamiltonian= to replace
  the hamiltonian instead.
*** Removed
+ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is removed. The state will be saved for every
  step.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.20...v0.2.22][v0.2.22]] - 2022-09-02

*** Added
+ *tetragono*: Add =save_configuration_file= option for =gm_run= and =ap_run= in tetragono shell, which saves sampling
  configurations during gradient descent.
+ *tetragono*: Add list as interface for =rename_io= in =tetragono.common_tensor.tensor_toolkit=. Original argument such