@@ -4,6 +4,7 @@
 
 *** Added
 + *tetragono*: Tetragono will print backtrace of the current process when receiving SIGUSR1.
++ *tetragono*: Add squash support for sampling lattice.
 *** Changed
 + *tetragono*: Update line search strategy, remove =line_search_error_threshold=, add =line_search_parameter= in
   =ap_run= and =gm_run=. =line_search_parameter= multiplied =step_size= obtained by line search will be the real step
